# workrb

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: custom_task_example.py  custom_task_graded_relevance_example.py
src/workrb/: __init__.py  config.py  evaluate.py  rankings.py  results.py  run.py
src/workrb/metrics/: ranking.py
src/workrb/models/: bi_encoder.py
src/workrb/tasks/: __init__.py
src/workrb/tasks/abstract/: ranking_base.py
src/workrb/tasks/ranking/: __init__.py  skill_extraction.py
tests/: test_contextmatch_model.py  test_duplicate_strategy.py  test_e2e_checkpointing.py  test_evaluate_multiple_models.py  test_import.py  test_multi_dataset_task.py  test_ranking_metrics.py  test_save_rankings_artifacts.py  test_task_loading.py
