[build-system] # https://docs.astral.sh/uv/concepts/projects/config/#build-systems
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workrb"]

[project]
name = "workrb"
version = "0.1.0"
description = "WorkRB: Work Research Benchmark. Easy benchmarking of AI progress in the work domain."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "Apache 2.0" }
authors = [
    { name = "TechWolf Research Team" },
    { name = "Matthias De Lange", email = "matthias.delange@techwolf.ai" },
]
keywords = [
    "nlp",
    "benchmarking",
    "skills",
    "jobs",
    "evaluation",
    "machine-learning",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.65.0",
    "datasets>=2.18.0",
    "requests>=2.31.0",
    "appdirs>=1.4.4",
    "PyYAML>=6.0",
    "sentence-transformers>=5.1.0",
    "pydantic>=2.11.9",
]

[dependency-groups] # https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
example = []
dev = [
    "commitizen (>=4.3.0)",
    "coverage[toml] (>=7.6.10)",
    "ipykernel (>=6.29.4)",
    "ipython (>=8.18.0)",
    "ipywidgets (>=8.1.2)",
    "pdoc (>=15.0.1)",
    "poethepoet (>=0.32.1)",
    "pre-commit (>=4.0.1)",
    "pytest (>=8.3.4)",
    "pytest-mock (>=3.14.0)",
    "pytest-xdist (>=3.6.1)",
    "ruff (>=0.9.2)",
    "jupyter>=1.0.0",
]


[project.urls]
Homepage = "https://github.com/techwolf-ai/workrb"
Documentation = "https://github.com/techwolf-ai/workrb#readme"
Repository = "https://github.com/techwolf-ai/workrb.git"
Issues = "https://github.com/techwolf-ai/workrb/issues"

[tool.commitizen] # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump: v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "uv"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run] # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml] # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.pytest.ini_options] # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --verbosity=2 --junitxml=reports/pytest.xml"
testpaths = ["src", "tests"]
xfail_strict = true

[tool.ruff] # https://docs.astral.sh/ruff/settings/
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "F",
    "FLY",
    "FURB",
    "I",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "Q",
    "RET",
    "RUF",
    "RSE",
    "SIM",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = ["D203", "D213", "E501", "PGH002", "PGH003", "RET504", "S101", "S307"]
unfixable = ["F401", "F841"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.poe.executor] # https://github.com/nat-n/poethepoet
type = "simple"

[tool.poe.tasks]

[tool.poe.tasks.docs]
help = "Generate this package's docs"
cmd = """
    pdoc
      --docformat $docformat
      --output-directory $outputdirectory
      workrb
    """

[[tool.poe.tasks.docs.args]]
help = "The docstring style (default: numpy)"
name = "docformat"
options = ["--docformat"]
default = "numpy"

[[tool.poe.tasks.docs.args]]
help = "The output directory (default: docs)"
name = "outputdirectory"
options = ["--output-directory"]
default = "docs"

[tool.poe.tasks.lint]
help = "Lint this package"
cmd = """
    pre-commit run
      --all-files
      --color always
    """

[tool.poe.tasks.test]
help = "Test this package"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage run"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage report"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage xml"
